# bdd_formation_simplon

./: pyproject.toml  start.py
BDD/: crud.py  models.py
SCRAPER/crawl_simplon/crawl_simplon/: pipelines.py
SCRAPER/crawl_simplon/crawl_simplon/spiders/: simplonspiderformation.py
TRAITEMENT_MCF/: download.py  treat_files.py
api_simplon/: .dockerignore  Dockerfile  dashboard.py  requirements.txt
api_simplon/app/: crud.py  database.py  main.py  models.py  schemas.py
api_simplon/app/routers/: formacodes.py  formations.py
api_simplon/utils/: my_functions.py
dashboard/: Dockerfile  dashboard.py  requirements.txt
dashboard/utils/: dpt_region_var.py
docs/: index.md
scraper/: Dockerfile  requirements.txt  start.py
scraper/crawl_simplon/crawl_simplon/: crud.py  models.py  pipelines.py
scraper/crawl_simplon/crawl_simplon/spiders/: simplonspiderformation.py
scripts/: aci.sh  acr.sh  deletteressources.sh  fileshare.sh  flexiblepostgres.sh  rg.sh  storage.sh
traitement_mcf/: Dockerfile  crud.py  download.py  models.py  requirements.txt  start.py  treat_files.py
