[tool.poetry]
name = "bdd-formation-simplon"
version = "0.1.0"
description = ""
authors = ["DaiTensa <dai.tensaout@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scrapy = "^2.11.2"
pandas = "^2.2.2"
sqlalchemy = "^2.0.31"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
xlsxwriter = "^3.2.0"
dateparser = "^1.2.0"
regex = "^2024.5.15"
geopy = "^2.4.1"
mkdocs = "^1.6.0"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.5"
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-material = "^9.5.30"
pymdown-extensions = "^10.8.1"
plotly = "^5.22.0"
aiohttp = "^3.9.5"
urllib3 = "^2.2.2"
pygame = "^2.6.0"
pyarrow = "^17.0.0"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
streamlit = "^1.37.1"
pipreqs = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
